new index to try travel fix

--- a/index.html
+++ b/index.html
@@ -452,17 +452,17 @@ footer .f-contact a {
     <span class="section-sub">Europe &nbsp;·&nbsp; Americas</span>
   </div>
 
-  <!-- England -->
+  <!-- England — Grand York -->
   <div class="row cols-2-1">
-    <div class="photo l" data-src="homepage/R0001303.jpg">
-      <img src="homepage/R0001303.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-48.jpg">
+      <img src="homepage/homepage-48.jpg" alt="" loading="lazy">
     </div>
     <div class="stack">
-      <div class="photo l" data-src="homepage/R0001306.jpg">
-        <img src="homepage/R0001306.jpg" alt="" loading="lazy">
+      <div class="photo l" data-src="homepage/homepage-49.jpg">
+        <img src="homepage/homepage-49.jpg" alt="" loading="lazy">
       </div>
-      <div class="photo l" data-src="homepage/R0001304.jpg">
-        <img src="homepage/R0001304.jpg" alt="" loading="lazy">
+      <div class="photo l" data-src="homepage/homepage-55.jpg">
+        <img src="homepage/homepage-55.jpg" alt="" loading="lazy">
       </div>
     </div>
   </div>
@@ -471,125 +471,119 @@ footer .f-contact a {
   <div class="gap"></div>
 
   <div class="row cols-3">
-    <div class="photo l" data-src="homepage/R0001811.jpg">
-      <img src="homepage/R0001811.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-47.jpg">
+      <img src="homepage/homepage-47.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/R0001794.jpg">
-      <img src="homepage/R0001794.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-56.jpg">
+      <img src="homepage/homepage-56.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/R0001430.jpg">
-      <img src="homepage/R0001430.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-65.jpg">
+      <img src="homepage/homepage-65.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">London — September 2022 &nbsp;·&nbsp; St Mary's Abbey, York</p>
+  <p class="photo-caption">York &nbsp;·&nbsp; St Mary's Abbey &nbsp;·&nbsp; London</p>
 
   <div class="gap"></div>
 
   <!-- France -->
-  <div class="row cols-1">
-    <div class="photo w" data-src="homepage/europe2ndpass7.jpg">
-      <img src="homepage/europe2ndpass7.jpg" alt="" loading="lazy">
+  <div class="row cols-3">
+    <div class="photo l" data-src="homepage/homepage-73.jpg">
+      <img src="homepage/homepage-73.jpg" alt="" loading="lazy">
+    </div>
+    <div class="photo l" data-src="homepage/homepage-77.jpg">
+      <img src="homepage/homepage-77.jpg" alt="" loading="lazy">
+    </div>
+    <div class="photo l" data-src="homepage/homepage-82.jpg">
+      <img src="homepage/homepage-82.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">Monsieur Bleu, Palais de Tokyo — Paris</p>
+  <p class="photo-caption">France</p>
 
   <div style="height:4px"></div>
 
-  <div class="row cols-3">
-    <div class="photo l" data-src="homepage/europe2ndpass13.jpg">
-      <img src="homepage/europe2ndpass13.jpg" alt="" loading="lazy">
+  <div class="row cols-2">
+    <div class="photo l" data-src="homepage/homepage-83.jpg">
+      <img src="homepage/homepage-83.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/R0002466.jpg">
-      <img src="homepage/R0002466.jpg" alt="" loading="lazy">
-    </div>
-    <div class="photo l" data-src="homepage/R0002316.jpg">
-      <img src="homepage/R0002316.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-87.jpg">
+      <img src="homepage/homepage-87.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">Île Saint-Honorat &nbsp;·&nbsp; Villa Ephrussi de Rothschild — Cap Ferrat</p>
+  <p class="photo-caption">Île Saint-Honorat &nbsp;·&nbsp; Monastery</p>
 
   <div class="gap"></div>
 
   <!-- Italy -->
   <div class="row cols-2-1">
-    <div class="photo l" data-src="homepage/europe2ndpass20.jpg">
-      <img src="homepage/europe2ndpass20.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-86.jpg">
+      <img src="homepage/homepage-86.jpg" alt="" loading="lazy">
     </div>
     <div class="stack">
-      <div class="photo l" data-src="homepage/R0002919.jpg">
-        <img src="homepage/R0002919.jpg" alt="" loading="lazy">
+      <div class="photo l" data-src="homepage/homepage-84.jpg">
+        <img src="homepage/homepage-84.jpg" alt="" loading="lazy">
       </div>
-      <div class="photo l" data-src="homepage/R0002688.jpg">
-        <img src="homepage/R0002688.jpg" alt="" loading="lazy">
+      <div class="photo l" data-src="homepage/homepage-99.jpg">
+        <img src="homepage/homepage-99.jpg" alt="" loading="lazy">
       </div>
     </div>
   </div>
-  <p class="photo-caption">Duomo di Firenze rooftop &nbsp;·&nbsp; Milan &nbsp;·&nbsp; Portofino</p>
+  <p class="photo-caption">Italy &nbsp;·&nbsp; Portofino</p>
 
   <div style="height:4px"></div>
 
   <div class="row cols-3">
-    <div class="photo l" data-src="homepage/europe2ndpass18.jpg">
-      <img src="homepage/europe2ndpass18.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-95.jpg">
+      <img src="homepage/homepage-95.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/europe2ndpass17.jpg">
-      <img src="homepage/europe2ndpass17.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-97.jpg">
+      <img src="homepage/homepage-97.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/R0003067.jpg">
-      <img src="homepage/R0003067.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-104.jpg">
+      <img src="homepage/homepage-104.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">Villa Balbi — Sestri Levante &nbsp;·&nbsp; Fiesole, Tuscany</p>
+  <p class="photo-caption">Italian coast &nbsp;·&nbsp; Milan</p>
 
   <div class="gap"></div>
 
   <!-- California -->
   <div class="row cols-2">
-    <div class="photo l" data-src="homepage/parker6.jpg">
-      <img src="homepage/parker6.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-112.jpg">
+      <img src="homepage/homepage-112.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/parker3.jpg">
-      <img src="homepage/parker3.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-122.jpg">
+      <img src="homepage/homepage-122.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">The Parker Palm Springs</p>
+  <p class="photo-caption">California</p>
 
   <div style="height:4px"></div>
 
   <div class="row cols-3">
-    <div class="photo l" data-src="homepage/L1270091.jpg">
-      <img src="homepage/L1270091.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-123.jpg">
+      <img src="homepage/homepage-123.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/parker5.jpg">
-      <img src="homepage/parker5.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-124.jpg">
+      <img src="homepage/homepage-124.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/R005158.jpg">
-      <img src="homepage/R005158.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-136.jpg">
+      <img src="homepage/homepage-136.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">Sunnylands, Rancho Mirage &nbsp;·&nbsp; The Parker Palm Springs</p>
+  <p class="photo-caption">Sunnylands &nbsp;·&nbsp; Palm Springs</p>
 
   <div class="gap"></div>
 
   <!-- Mexico -->
-  <div class="row cols-1">
-    <div class="photo w" data-src="homepage/forastaff19.jpg">
-      <img src="homepage/forastaff19.jpg" alt="" loading="lazy">
-    </div>
-  </div>
-  <p class="photo-caption">Viceroy — Mexico</p>
-
-  <div style="height:4px"></div>
-
   <div class="row cols-2">
-    <div class="photo l" data-src="homepage/forastaff18.jpg">
-      <img src="homepage/forastaff18.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-203.jpg">
+      <img src="homepage/homepage-203.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/forastaff17.jpg">
-      <img src="homepage/forastaff17.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-137.jpg">
+      <img src="homepage/homepage-137.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <p class="photo-caption">Viceroy — pool at night &nbsp;·&nbsp; pool, Mexico</p>
+  <p class="photo-caption">Mexico &nbsp;·&nbsp; The Viceroy</p>
 </section>
 
 <!-- ══════════════════════════════════
@@ -752,16 +746,16 @@ footer .f-contact a {
     <div class="photo l" data-src="homepage/homepage-185.jpg">
       <img src="homepage/homepage-185.jpg" alt="" loading="lazy">
     </div>
-    <div class="photo l" data-src="homepage/homepage-195.jpg">
-      <img src="homepage/homepage-195.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-190.jpg">
+      <img src="homepage/homepage-190.jpg" alt="" loading="lazy">
     </div>
   </div>
 
   <div style="height:4px"></div>
 
   <div class="row cols-2">
-    <div class="photo l" data-src="homepage/homepage-190.jpg">
-      <img src="homepage/homepage-190.jpg" alt="" loading="lazy">
+    <div class="photo l" data-src="homepage/homepage-195.jpg">
+      <img src="homepage/homepage-195.jpg" alt="" loading="lazy">
     </div>
     <div class="photo l" data-src="homepage/homepage-197.jpg">
       <img src="homepage/homepage-197.jpg" alt="" loading="lazy">
