--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <!-- elisdream.jpg — dressing room mirror, she's getting ready -->
   <div style="flex:1;padding:0 0 var(--mg) var(--mg);display:flex;align-items:stretch;">
     <div class="photo ph-mirror" style="flex:1;min-height:100vh;">
-      <img src="elisdream.jpg" alt="">
+      <img src="elisdream/elisdream.jpg" alt="">
       <div style="position:absolute;bottom:22px;right:22px;"><div class="cap-lt">i.</div></div>
     </div>
   </div>
@@ -186,7 +186,7 @@
     <!-- elisdream.jpg repeated — wider shot of same setup -->
     <div style="flex:1;">
       <div class="photo ph-mirror frame-corner-tl" style="height:62vh;">
-        <img src="elisdream.jpg" alt="">
+        <img src="elisdream/elisdream.jpg" alt="">
         <div style="position:absolute;bottom:16px;left:16px;"><div class="cap-lt">i.</div></div>
       </div>
     </div>
@@ -194,7 +194,7 @@
     <!-- elisdream-2.jpg — second mirror shot, dropped -->
     <div style="flex:1;margin-top:calc(var(--mg) * 2);">
       <div class="photo ph-bw framed" style="height:66vh;margin-top:0;">
-        <img src="elisdream-2.jpg" alt="">
+        <img src="elisdream/elisdream-2.jpg" alt="">
         <div style="position:absolute;bottom:16px;left:16px;"><div class="cap-lt">ii.</div></div>
       </div>
     </div>
@@ -202,7 +202,7 @@
     <!-- elisdream-3.jpg — third mirror shot, back up -->
     <div style="flex:1;">
       <div class="photo ph-bw" style="height:58vh;margin:var(--mg) 0 var(--mg) 0;">
-        <img src="elisdream-3.jpg" alt="">
+        <img src="elisdream/elisdream-3.jpg" alt="">
         <div style="position:absolute;bottom:16px;left:16px;"><div class="cap-lt">iii.</div></div>
       </div>
     </div>
@@ -240,7 +240,7 @@
   <!-- elisdream-9.jpg — against the Cadillac, teal, touches right edge -->
   <div style="flex:1.5;padding:var(--mg) 0 var(--mg) var(--mg);">
     <div class="photo ph-teal" style="height:100%;min-height:65vh;">
-      <img src="elisdream-9.jpg" alt="">
+      <img src="elisdream/elisdream-9.jpg" alt="">
       <div style="position:absolute;bottom:20px;right:20px;"><div class="cap-lt">iv.</div></div>
     </div>
   </div>
@@ -257,7 +257,7 @@
     <!-- elisdream-5.jpg — full length standing, pure magenta, taller, touches left -->
     <div class="wide" style="margin-top:0;">
       <div class="photo ph-pink frame-left" style="height:75vh;">
-        <img src="elisdream-5.jpg" alt="">
+        <img src="elisdream/elisdream-5.jpg" alt="">
         <div style="position:absolute;bottom:22px;left:22px;"><div class="cap-lt">v.</div></div>
       </div>
     </div>
@@ -265,7 +265,7 @@
     <!-- elisdream-11.jpg — tanning bed portrait, shorter, dropped, touches right -->
     <div class="narrow" style="margin-top:calc(var(--mg) * 2.5);">
       <div class="photo ph-pink frame-right" style="height:60vh;">
-        <img src="elisdream-11.jpg" alt="">
+        <img src="elisdream/elisdream-11.jpg" alt="">
         <div style="position:absolute;bottom:22px;left:22px;"><div class="cap-lt">vi.</div></div>
       </div>
     </div>
@@ -282,7 +282,7 @@
   <!-- elisdream-13.jpg — pink, in the car, looking back, touches left -->
   <div style="flex:1.5;padding:var(--mg) var(--mg) var(--mg) 0;">
     <div class="photo ph-pink" style="height:100%;min-height:58vh;">
-      <img src="elisdream-13.jpg" alt="">
+      <img src="elisdream/elisdream-13.jpg" alt="">
       <div style="position:absolute;bottom:22px;left:22px;"><div class="cap-lt">vii.</div></div>
     </div>
   </div>
@@ -319,7 +319,7 @@
 <section style="padding:var(--mg) 0;">
   <div class="photo ph-bw" style="width:100%;height:88vh;">
     <!-- elisdream-14.jpg — b&w afro, two of her, backs to camera -->
-    <img src="elisdream-14.jpg" alt="">
+    <img src="elisdream/elisdream-14.jpg" alt="">
     <div style="position:absolute;top:44px;left:48px;">
       <p class="fell" style="font-size:clamp(32px,5.5vw,60px);
         color:rgba(240,235,224,0.1);line-height:1;font-style:italic;">
@@ -340,7 +340,7 @@
     <!-- elisdream-15.jpg — two figures amber, touches left -->
     <div style="flex:1;">
       <div class="photo ph-amber frame-corner-tl" style="height:56vh;">
-        <img src="elisdream-15.jpg" alt="">
+        <img src="elisdream/elisdream-15.jpg" alt="">
         <div style="position:absolute;bottom:14px;left:14px;"><div class="cap-lt">ix.</div></div>
       </div>
     </div>
@@ -348,7 +348,7 @@
     <!-- elisdream-16.jpg — amber portrait red lips, floated, tallest -->
     <div style="flex:1;margin-top:calc(var(--mg) * 1.5);">
       <div class="photo ph-amber framed" style="height:64vh;margin-top:0;">
-        <img src="elisdream-16.jpg" alt="">
+        <img src="elisdream/elisdream-16.jpg" alt="">
         <div style="position:absolute;bottom:14px;left:14px;"><div class="cap-lt">x.</div></div>
       </div>
     </div>
@@ -356,7 +356,7 @@
     <!-- elisdream-17.jpg — amber, dropped most, touches right -->
     <div style="flex:1;margin-top:calc(var(--mg) * 3);">
       <div class="photo ph-amber frame-corner-tr" style="height:52vh;">
-        <img src="elisdream-17.jpg" alt="">
+        <img src="elisdream/elisdream-17.jpg" alt="">
         <div style="position:absolute;bottom:14px;left:14px;"><div class="cap-lt">xi.</div></div>
       </div>
     </div>
@@ -374,7 +374,7 @@
     <!-- elisdream-19.jpg — back to camera, holding ball up, floated -->
     <div class="narrow" style="margin-top:calc(var(--mg) * 1.5);">
       <div class="photo ph-disco framed" style="height:60vh;">
-        <img src="elisdream-19.jpg" alt="">
+        <img src="elisdream/elisdream-19.jpg" alt="">
         <div style="position:absolute;bottom:20px;left:20px;"><div class="cap-lt">xii.</div></div>
       </div>
     </div>
@@ -382,7 +382,7 @@
     <!-- elisdream-18.jpg — disco ball close, taller, touches right -->
     <div class="wide" style="margin-top:0;">
       <div class="photo ph-disco frame-right" style="height:72vh;">
-        <img src="elisdream-18.jpg" alt="">
+        <img src="elisdream/elisdream-18.jpg" alt="">
         <div style="position:absolute;top:32px;left:28px;right:28px;">
           <p class="italic" style="font-size:clamp(12px,1.6vw,17px);
             color:rgba(240,235,224,0.18);line-height:1.8;">
@@ -408,7 +408,7 @@
     <!-- elisdream-21.jpg — wide teal, she's small by the car, touches left -->
     <div style="flex:1;margin-top:0;">
       <div class="photo ph-teal frame-left" style="height:58vh;">
-        <img src="elisdream-21.jpg" alt="">
+        <img src="elisdream/elisdream-21.jpg" alt="">
         <div style="position:absolute;bottom:18px;right:18px;"><div class="cap-lt">xiv.</div></div>
       </div>
     </div>
@@ -416,7 +416,7 @@
     <!-- elisdream-22.jpg — same composition, b&w, dropped, touches right -->
     <div style="flex:1;margin-top:calc(var(--mg) * 2);">
       <div class="photo ph-bw frame-right" style="height:64vh;">
-        <img src="elisdream-22.jpg" alt="">
+        <img src="elisdream/elisdream-22.jpg" alt="">
         <div style="position:absolute;bottom:18px;right:18px;"><div class="cap-lt">xv.</div></div>
       </div>
     </div>
@@ -443,7 +443,7 @@
 <section style="padding:var(--mg) 0;">
   <div class="photo ph-warm" style="width:100%;height:82vh;">
     <!-- elisdream-6.jpg — sitting on car roof, head forward, the stillness -->
-    <img src="elisdream-6.jpg" alt="">
+    <img src="elisdream/elisdream-6.jpg" alt="">
     <div style="position:absolute;bottom:38px;left:52px;right:52px;text-align:center;">
       <p class="italic" style="font-size:clamp(13px,1.8vw,19px);
         color:rgba(240,235,224,0.18);line-height:1.9;letter-spacing:0.04em;">
@@ -464,7 +464,7 @@
     <!-- elisdream-4.jpg — face against disco ball, staring, taller, touches left -->
     <div style="flex:1;margin-top:0;">
       <div class="photo ph-bw frame-left" style="height:68vh;">
-        <img src="elisdream-4.jpg" alt="">
+        <img src="elisdream/elisdream-4.jpg" alt="">
         <div style="position:absolute;bottom:18px;left:18px;"><div class="cap-lt">xvii.</div></div>
       </div>
     </div>
@@ -472,7 +472,7 @@
     <!-- elisdream-20.jpg — afro close, red lips, shorter, dropped, touches right -->
     <div style="flex:1;margin-top:calc(var(--mg) * 2.5);">
       <div class="photo ph-bw frame-right" style="height:55vh;">
-        <img src="elisdream-20.jpg" alt="">
+        <img src="elisdream/elisdream-20.jpg" alt="">
         <div style="position:absolute;bottom:18px;left:18px;"><div class="cap-lt">xviii.</div></div>
       </div>
     </div>
@@ -488,7 +488,7 @@
 <section style="padding:var(--mg) 0;">
   <div class="photo ph-bw" style="width:100%;height:86vh;">
     <!-- elisdream-10.jpg — pure silhouette against grid ceiling, arms back -->
-    <img src="elisdream-10.jpg" alt="">
+    <img src="elisdream/elisdream-10.jpg" alt="">
     <div style="position:absolute;bottom:32px;right:36px;"><div class="caption">xix.</div></div>
   </div>
 </section>
@@ -503,7 +503,7 @@
   <!-- elisdream-7.jpg — through diamond quilt leather, looking back, the closer -->
   <div style="flex:1;padding:0 var(--mg) var(--mg) 0;">
     <div class="photo ph-blue" style="height:100%;min-height:80vh;">
-      <img src="elisdream-7.jpg" alt="">
+      <img src="elisdream/elisdream-7.jpg" alt="">
       <div style="position:absolute;bottom:36px;left:32px;"><div class="cap-lt">xx. — fin.</div></div>
     </div>
   </div>
